loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: '<-' expected but ')' found.
    for (compteur <1 to 8) {
                         ^LoopCourse:7: error: illegal start of simple expression
  }
  ^